src/dts/tests/type_alias/type_alias.exp
Error: type_alias.js:3
  3: var a : number = M.x;
                      ^^^ string. This type is incompatible with
  3: var a : number = M.x;
             ^^^^^^ number


Found 1 error
